JniPairingSecretFetcher currently runs on the UI thread but the secret fetching callback will be run on the network thread. Per wez@'s suggestion it will be more straightforward if the class runs on network thread and post task to UI thread to fetch the secret.

Doc: https://docs.google.com/document/d/1ZK-UQSC_rTjNsBa_MFbCmCh3fQRPFuVAwKhWnTZqc_Q/edit?usp=sharing

BUG=614242

Review-Url: https://codereview.chromium.org/2047613002
Cr-Commit-Position: refs/heads/master@{#398364}

Former-commit-id: 8d06c0ca4c2784ac15f480bba74956bad5cbe522